<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="mainLabel">My Nanodegree Apps!</string>
    <string name="button_popular_movies">Popular Movies</string>
    <string name="button_stock_hawk">Stock Hawk</string>
    <string name="button_build_it_bigger">Build it Bigger</string>
    <string name="button_make_your_app_material">Make Your App Material</string>
    <string name="button_go_ubiquitous">Go Ubiquitous</string>
    <string name="button_Capstone">Capstone</string>
    <string name="Toast_button">This button will launch my %s app!</string>
</resources>
